# fusion-3.7

./: .gitignore  CHANGELOG.md  README.md  attributes.csv  pyproject.toml  tox.ini
.github/workflows/: dev.yml  release.yml
py_tests/: conftest.py  test_attributes.py  test_authentication.py  test_credentials.py  test_dataflow.py  test_dataset.py  test_embeddings.py  test_filesystem.py  test_fusion.py  test_fusion_types.py  test_product.py  test_report.py  test_report_attributes.py  test_reports.py  test_utils.py
src/fusion/: __init__.py  application_types.py  attributes.py  authentication.py  credentials.py  dataflow.py  dataset.py  embeddings.py  fusion.py  fusion_filesystem.py  fusion_py37.py  product.py  report.py  report_attributes.py  types.py  utils.py
src/fusion37/: attributes.py  authentication.py  credentials.py  dataflow.py  dataset.py  fusion.py  fusion_filesystem.py  product.py  report.py  utils.py
src/pyfusion/: fusion.py
